--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Ontimize Web QuickStart</title>
 
   <script>
-    // document.write('<base href="/" />');
-    document.write('<base href="/ontimize-web-ng2-charts/" />');
+    document.write('<base href="/" />');
+    // document.write('<base href="/ontimize-web-ng2-charts/" />');
   </script>
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -19,8 +19,8 @@
   <link rel="stylesheet" type="text/css" href="./assets/css/app.css">
 
   <link rel="stylesheet" type="text/css" href="./vendor/nvd3/build/nv.d3.min.css"/>
-  <script src="./vendor/d3/d3.min.js" charset="utf-8"></script>
-  <script src="./vendor/nvd3/build/nv.d3.min.js"></script>
+  <!--<script src="./vendor/d3/d3.min.js" charset="utf-8"></script>
+  <script src="./vendor/nvd3/build/nv.d3.min.js"></script>-->
 
 
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/monokai_sublime.min.css">
