--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
   <link rel="stylesheet" type="text/css" href="./assets/css/app.css">
 
   <link rel="stylesheet" type="text/css" href="./vendor/nvd3/build/nv.d3.min.css"/>
-  <!--<script src="./vendor/d3/d3.min.js" charset="utf-8"></script>
-  <script src="./vendor/nvd3/build/nv.d3.min.js"></script>-->
-
 
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/monokai_sublime.min.css">
-  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/languages/typescript.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/typescript.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.16/clipboard.min.js"></script>
 
 </head>
 <body>
